--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,11 @@ plugins:
 
 sass:
   style: compressed
+  load_paths:
+    - _sass
+    - node_modules
+
+include: ["node_modules/tailwindcss"]
 
 collections:
   beers:
