--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
