--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ email: oskaremilsson@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Gagnef Brewing
 baseurl: "" # the subpath of your site, e.g. /blog
-url: gagnef-brewing.github.io # the base hostname & protocol for your site, e.g. http://example.com
-domain: gagnef-brewing.github.io
-version: 0.0.3
+url: gagnefbrewing.com # the base hostname & protocol for your site, e.g. http://example.com
+domain: gagnefbrewing.com
+version: 0.0.4
 
 # Build settings
 # theme: minima
