--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ sass:
     - _sass
     - node_modules
 
-include: ["node_modules/tailwindcss"]
+include: ["node_modules/tailwindcss", "CNAME"]
 
 collections:
   beers:
