--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: oskaremilsson@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Gagnef Brewing
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://gagnefbrewing.com # the base hostname & protocol for your site, e.g. http://example.com
-domain: gagnefbrewing.com
+url: https://gagnefbrewing.se # the base hostname & protocol for your site, e.g. http://example.com
+domain: gagnefbrewing.se
 version: 0.0.4
 
 # Build settings
