--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
@@ -19,14 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Gagnef Brewing
-email: oskaremilsson@gmail.com
+email: info@gagnefbrewing.se
 description: >- # this means to ignore newlines until "baseurl:"
-  Hantverksöl från Gagnef, Dalarna.
+  Vi brygger i Gagnef
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://gagnefbrewing.se # the base hostname & protocol for your site, e.g. http://example.com
 domain: gagnefbrewing.se
 og_image: https://gagnefbrewing.se/assets/images/og/og_image.jpg
-version: 0.0.13
+version: 0.1.0
 
 # Build settings
 # theme: minima
