--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://gagnefbrewing.se # the base hostname & protocol for your site, e.g. http://example.com
 domain: gagnefbrewing.se
-og_image: https://gagnefbrewing.se/assets/images/og/og_image.jpg
+og_image: /assets/images/og/og_image.jpg
 version: 0.1.0
 
 # Build settings
